Exponent Content Management System
Copyright (c) 2004-2011 OIC Group, Inc.
===============================================

Added / Fixed / changed for 2.0.4
-----------------------
# This release focuses on revising the install/update/upgrade process
  - installation and upgrade must now be specifically invoked by url
  - notice given to admin uses or upgrade need or new version availability
# WYSIWYG editor (CKEditor) now more faithfully displays content styles
  - editor can now also have customized format, font, & styles drop-downs
# Many fixes and updates
  - corrects path problem w/ user extensions, esp. the avatar extension
  - improved tag viewing, usage and management
  - improved aggregation selection list
  - can now remove missing files or add files found on server to File Manager
  - plus many other bug fixes and updates

Added / Fixed / changed for 2.0.3
-----------------------
# This release focuses on refining the language system
  - for general use, installation, and to simplify translation creation
  - Spanish, German, Danish, Norwegian, Czech, and Finnish translations added
# Tweaked permission system to more accurately reflect designed purpose
  - Permissions now cascade down thru pages and containers
  - Management screens accurately reflect inherited and implied permissions
  - The super-admin may now create other super-admin users
  - Global sidebar modules don't inherit current page permissions & now require permission for non-admin users
# File Manager, Uploader, & Pixidou editor - tweaked and fixed
# Flowplayer module now offers style selection
# Filedownloads optionally shows media player for audio(mp3)/video(flv/f4v) downloads
# If database is down, the system is put in a temp maintenance mode instead of running installation
# Adds search result highlighting
# Plus many other bug fixes and updates

Added / Fixed / changed for 2.0.2
-----------------------
# This release focuses on integrating Smarty v3